# Personal_Organizer

./: README.md
database/: personalorganizer.db  personalorganizer.sqbpro
personal_traker/: CMakeLists.txt  addexpenses.cpp  addexpenses.h  addexpenses.ui  addincome.cpp  addincome.h  addincome.ui  dashboard.cpp  dashboard.h  dashboard.ui  databaseheader.h  edittimetable.cpp  edittimetable.h  edittimetable.ui  financialstate.cpp  financialstate.h  financialstate.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  newresource.qrc  report.cpp  report.h  report.ui  setbudget.cpp  setbudget.h  setbudget.ui  signup.cpp  signup.h  signup.ui  specialdates.cpp  specialdates.h  specialdates.ui  viewtimetable.cpp  viewtimetable.h  viewtimetable.ui
